objects/PSG_Contract__c.object
<CustomObject>
    <description>Additonal Account information for Contract Loading use</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2009__c</fullName>
        <label>Contract Manager 2009</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2010__c</fullName>
        <label>Contract Manager 2010</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2011__c</fullName>
        <label>Contract Manager 2011</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Upside_2011__c</fullName>
        <label>Contract Manager Upside 2011</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Solicitation_2011__c</fullName>
        <label>Contract Solicitation 2011</label>
        <picklist>
            <picklistValues>
                <fullName>GDS Hotel-Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covered by corporate agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet solicited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Quick Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC - No Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received, reviewing &amp; negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract checklist created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Renewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contract-Rates loaded via Extranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Solicitation_2012__c</fullName>
        <label>Contract Solicitation 2012</label>
        <picklist>
            <picklistValues>
                <fullName>GDS Hotel-Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covered by corporate agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet solicited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Quick Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC - No Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received, reviewing &amp; negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract checklist created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Renewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contract-Rates loaded via Extranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Docusign_ID__c</fullName>
        <label>Docusign ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_ID__c</fullName>
        <label>EAN ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>PSG Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSG Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>